--- a/src/cross-sell-tile/styles.css
+++ b/src/cross-sell-tile/styles.css
@@ -20,8 +20,8 @@
   background: linear-gradient(180deg, #a49fca 0%, #1704a2 100%);
   display: flex;
   flex-direction: column;
-  align-items: "center";
-  justify-content: "center";
+  align-items: center;
+  justify-content: center;
 }
 
 .topwrapper {
